:airplane: 牌と前後の文字との間に間隔を空けるように

--- a/formj/svg.css
+++ b/formj/svg.css
@@ -2,6 +2,12 @@
 	width: 30px;
 	height: 42px;
   vertical-align: text-bottom;
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+.tile + .tile {
+  margin-left: -4px;
 }
 
 .tenbo {
