:airplane: ブラックリスト対応、漢字表記対応

--- a/formj/svg.css
+++ b/formj/svg.css
@@ -4,12 +4,10 @@
   width: 30px;
   height: 42px;
   vertical-align: text-bottom;
-  margin-left: 4px;
-  margin-right: 4px;
 }
 
-.tile + .tile {
-  margin-left: -4px;
+.margin {
+  margin-right: 4px;
 }
 
 .tenbo {
